tests/compile_fail/declare_scheduler_topology_vs_constraints_min_numa_nodes_exceeds.stderr
error: declare_scheduler!: constraints.min_numa_nodes (4) exceeds effective topology numa_nodes (1); every gauntlet preset would reject this test at runtime and the test would never execute.
  --> tests/compile_fail/declare_scheduler_topology_vs_constraints_min_numa_nodes_exceeds.rs:13:25
   |
13 |         min_numa_nodes: 4,
   |                         ^
